<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background6png">

    <LinearLayout
        android:id="@+id/ll_endVote1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="2">
        <TextView
            android:id="@+id/tv_endVoteGravote"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textSize="@dimen/text32dp"
            android:textColor="@color/putih"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_endVote2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_thankYou"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/text_costume20dp"
            android:text="@string/ev_thank"
            android:textColor="@color/putih"
            android:textSize="@dimen/text_costume26dp" />

        <Button
            android:id="@+id/btn_backToDashboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center|top"
            android:text="@string/back"
            android:textColor="@color/putih"
            android:textSize="@dimen/text_costume20dp" />
    </LinearLayout>
</LinearLayout>