<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/sv_isiProfil"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll_isiProfil1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background4">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar" />
        <TextView
            android:id="@+id/tv_candidate"
            android:padding="@dimen/margin8dp"
            android:textSize="@dimen/text16dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/candidate1"
            android:textColor="@color/putih"
            android:background="@color/biruGelap"/>
        <ImageView
            android:id="@+id/iv_candidate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_costume200dp"
            android:src="@mipmap/ic_launcher_round"
            android:background="@color/putih"/>
        <View
            android:id="@id/viewline"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin1dp"
            android:background="@color/hitam"/>
            <LinearLayout
                android:id="@+id/ll_isiProfil2"
                android:padding="@dimen/margin8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/biruCerah">
                <TextView
                    android:id="@+id/tv_namaKetua"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/nama_ketua1"
                    android:textColor="@color/biruTua"
                    android:textSize="@dimen/text16dp"/>
                <TextView
                    android:id="@+id/tv_namaWakil"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/nama_wakil1"
                    android:textColor="@color/biruTua"
                    android:textSize="@dimen/text16dp"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/ll_isiProfil3"
                    android:padding="@dimen/margin8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@color/biruMuda">
                    <LinearLayout
                        android:id="@+id/ll_isiProfil4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/tv_ketua"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/calon_ketua"
                            android:textColor="@color/biruTua"
                            android:textSize="@dimen/text_costume20dp"/>
                        <TextView
                            android:id="@+id/tv_wakil"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/calon_wakil"
                            android:textColor="@color/biruTua"
                            android:textSize="@dimen/text_costume20dp"/>
                    </LinearLayout>
            </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_isiProfil5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_visi"
                android:paddingTop="@dimen/text_costume20dp"
                android:textColor="@color/putih"
                android:gravity="center|bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/visi"
                android:textSize="@dimen/text32dp"/>
            <TextView
                android:id="@+id/tv_isiVisi"
                android:padding="@dimen/text_costume20dp"
                android:textColor="@color/putih"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/isivisi1"/>
        </LinearLayout>

                <TextView
                    android:id="@+id/tv_misi"
                    android:paddingLeft="@dimen/text_costume20dp"
                    android:layout_marginTop="@dimen/margin16dp"
                    android:textColor="@color/putih"
                    android:gravity="left|bottom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/misi"
                    android:textSize="@dimen/text32dp"/>
        <LinearLayout
            android:id="@+id/ll_isiProfil6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_isiJudulMisi1"
                    android:paddingLeft="@dimen/text_costume20dp"
                    android:layout_marginTop="@dimen/margin8dp"
                    android:textColor="@color/putih"
                    android:gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="memanjukan upn"
                    android:textSize="@dimen/text_costume26dp"/>
                <TextView
                    android:id="@+id/isiMisi1"
                    android:padding="@dimen/text_costume20dp"
                    android:textColor="@color/putih"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/isivisi1"/>
        </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_isiProfil7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_isiJudulMisi2"
                    android:paddingRight="@dimen/text_costume20dp"
                    android:layout_marginTop="@dimen/margin8dp"
                    android:textColor="@color/putih"
                    android:gravity="right"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="memanjukan upn"
                    android:textSize="@dimen/text_costume26dp"/>
                <TextView
                    android:id="@+id/tv_isiMisi2"
                    android:gravity="right"
                    android:padding="@dimen/text_costume20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/putih"
                    android:layout_weight="1"
                    android:text="@string/isivisi1"/>
        </LinearLayout>
    <TextView
        android:id="@+id/tv_programUnggulan"
        android:layout_marginTop="@dimen/margin16dp"
        android:textColor="@color/putih"
        android:gravity="center|bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/program_unggulan"
        android:textSize="@dimen/text32dp"/>
    <LinearLayout
        android:id="@+id/ll_isiProfil8"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_judulUnggulan"
            android:layout_margin="@dimen/margin16dp"
            android:textColor="@color/putih"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="memanjukan upn"
            android:textSize="@dimen/text_costume26dp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/iv_gambarUnggulan"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin128dp"
            android:layout_marginLeft="@dimen/margin64dp"
            android:layout_marginRight="@dimen/margin64dp"
            android:padding="16dp"
            android:src="@drawable/candidate_icon"
            android:background="@drawable/oval"

            android:elevation="@dimen/margin4dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/iv_isiUnggulan"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin16dp"
            android:layout_marginRight="@dimen/margin16dp"
            android:layout_marginBottom="@dimen/margin32dp"
            android:padding="@dimen/margin16dp"
            android:textColor="@color/putih"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/isivisi1"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
    </LinearLayout>