<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:background="@color/biruTua">

    <LinearLayout
        android:id="@+id/ll_changePassword1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_changePassword"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:layout_margin="@dimen/margin16dp"
            android:src="@drawable/lupapasswordlogo"
            android:elevation="@dimen/margin4dp"/>

        <TextView
            android:id="@+id/tv_changePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Change your password"
            android:textSize="@dimen/text_costume26dp"
            android:textColor="@color/putih"/>
        <TextView
            android:id="@+id/tv_forYourbestsafety"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/putih"
            android:text="if your best safety, please change your password before you move to the next step."
            android:textSize="@dimen/text16dp"
            android:padding="@dimen/margin8dp"/>

        <LinearLayout
            android:id="@+id/ll_changePassword2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <EditText
                android:id="@+id/et_currentPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/margin8dp"
                android:layout_marginLeft="@dimen/margin32dp"
                android:layout_marginRight="@dimen/margin32dp"
                android:background="@drawable/kotakhitam"
                android:textColorHint="@color/abuAbu"
                android:gravity="center"
                android:hint="@string/current_password"
                android:text="@string/isi_username"
                android:textColor="@color/hitam"
                android:elevation="4dp"/>


            <EditText
                android:id="@+id/et_newPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin8dp"
                android:layout_marginLeft="@dimen/margin32dp"
                android:layout_marginRight="@dimen/margin32dp"
                android:layout_weight="1"
                android:background="@drawable/kotakhitam"
                android:textColorHint="@color/abuAbu"
                android:elevation="4dp"
                android:gravity="center"
                android:hint="@string/new_password"
                android:text="@string/isi_password"
                android:textColor="@color/hitam" />


            <EditText
                android:id="@+id/et_passwordConfirmation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin8dp"
                android:layout_marginLeft="@dimen/margin32dp"
                android:layout_marginRight="@dimen/margin32dp"
                android:layout_weight="1"
                android:background="@drawable/kotakhitam"
                android:textColorHint="@color/abuAbu"
                android:elevation="4dp"
                android:gravity="center"
                android:hint="@string/password_confirmation"
                android:text=""
                android:textColor="@color/hitam" />


            <TextView
                android:id="@+id/tv_useUpTo"
                android:layout_marginBottom="@dimen/margin8dp"
                android:layout_marginLeft="@dimen/margin32dp"
                android:layout_marginRight="@dimen/margin32dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/text8dp"
                android:text="use up to 8 characters long. please use an unique password with letter and number combination"
                android:textColor="@color/putih"/>

        </LinearLayout>
        <Button
            android:id="@+id/btn_next"
            android:background="@null"
            android:paddingRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right|center"
            android:text="next"
            android:textColor="@color/putih"/>
    </LinearLayout>
</LinearLayout>