<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/sv_quickCount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:id="@+id/ll_quickCount1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background7">
        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar" />
        <TextView
            android:id="@+id/tv_quickcount1"
            android:textColor="@color/putih"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/candidate"
            android:textSize="@dimen/text_costume20dp"
            android:layout_margin="@dimen/margin16dp"/>

        <LinearLayout
            android:id="@+id/ll_quickCount2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/iv_candidate1"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_margin="@dimen/margin16dp"
                android:src="@mipmap/ic_launcher_round"
                android:elevation="@dimen/margin4dp"/>

            <TextView
                android:id="@+id/tv_quickCount1"
                android:layout_weight="1"
                android:textColor="@color/putih"
                android:layout_marginBottom="@dimen/margin8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/text32dp"
                android:text="@string/quick_nomor1"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_quickCount3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/tv_quickCount2"
                android:layout_weight="1"
                android:textColor="@color/putih"
                android:layout_marginBottom="@dimen/margin8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/text32dp"
                android:text="@string/quick_nomor2"
                android:layout_gravity="center"
                android:gravity="center"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_candidate2"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="@dimen/margin128dp"
                android:layout_height="@dimen/margin128dp"
                android:layout_margin="@dimen/margin8dp"
                android:src="@mipmap/ic_launcher_round"
                android:elevation="@dimen/margin4dp"/>


        </LinearLayout>
    </LinearLayout>
</ScrollView>
    </LinearLayout>